@@ -123,10 +123,23 @@ class AdapterServiceBinder extends IBluetooth.Stub {
     @RequiresPermission(BLUETOOTH_CONNECT)
     private AdapterService getServiceAndEnforceCallerUserAndConnect(
             AttributionSource source, String method) {
+        return getServiceAndEnforceCallerUserAndConnectInternal(source, method, false);
+    }
+
+    @RequiresPermission(BLUETOOTH_CONNECT)
+    private AdapterService getServiceAndEnforceCallerUserAndConnectAllowPcc(
+            AttributionSource source, String method) {
+        return getServiceAndEnforceCallerUserAndConnectInternal(source, method, true);
+    }
+
+    @RequiresPermission(BLUETOOTH_CONNECT)
+    private AdapterService getServiceAndEnforceCallerUserAndConnectInternal(
+            AttributionSource source, String method, boolean allowPccBypass) {
         var service = getService();
         if (service == null
                 || !callerIsSystemOrActiveOrManagedUser(service, TAG, method)
-                || !enforceConnectPermissionForDataDelivery(service, source, TAG, method)) {
+                || !enforceConnectPermissionForDataDelivery(
+                        service, source, TAG, method, allowPccBypass)) {
             return null;
         }
         return service;
@@ -156,7 +169,7 @@ class AdapterServiceBinder extends IBluetooth.Stub {
 
     @Override
     public List<ParcelUuid> getUuids(AttributionSource source) {
-        var service = getServiceAndEnforceCallerUserAndConnect(source, "getUuids");
+        var service = getServiceAndEnforceCallerUserAndConnectAllowPcc(source, "getUuids");
         if (service == null) {
             return Collections.emptyList();
         }
@@ -330,7 +343,7 @@ class AdapterServiceBinder extends IBluetooth.Stub {
             return Collections.emptyList();
         }
 
-        return Arrays.asList(service.getBondedDevices());
+        return List.copyOf(service.getBondedDevices());
     }
 
     @Override
@@ -629,7 +642,8 @@ class AdapterServiceBinder extends IBluetooth.Stub {
     @Override
     public List<BluetoothDevice> getActiveDevices(
             @ActiveDeviceProfile int profile, AttributionSource source) {
-        var service = getServiceAndEnforceCallerUserAndConnect(source, "getActiveDevices");
+        var method = "getActiveDevices";
+        var service = getServiceAndEnforceCallerUserAndConnectAllowPcc(source, method);
         if (service == null) {
             return Collections.emptyList();
         }
@@ -774,7 +788,7 @@ class AdapterServiceBinder extends IBluetooth.Stub {
     @Override
     public String getRemoteName(BluetoothDevice device, AttributionSource source) {
         requireNonNull(device);
-        var service = getServiceAndEnforceCallerUserAndConnect(source, "getRemoteName");
+        var service = getServiceAndEnforceCallerUserAndConnectAllowPcc(source, "getRemoteName");
         if (service == null) {
             return null;
         }
@@ -785,7 +799,7 @@ class AdapterServiceBinder extends IBluetooth.Stub {
     @Override
     public int getRemoteType(BluetoothDevice device, AttributionSource source) {
         requireNonNull(device);
-        var service = getServiceAndEnforceCallerUserAndConnect(source, "getRemoteType");
+        var service = getServiceAndEnforceCallerUserAndConnectAllowPcc(source, "getRemoteType");
         if (service == null) {
             return BluetoothDevice.DEVICE_TYPE_UNKNOWN;
         }
@@ -796,7 +810,7 @@ class AdapterServiceBinder extends IBluetooth.Stub {
     @Override
     public String getRemoteAlias(BluetoothDevice device, AttributionSource source) {
         requireNonNull(device);
-        var service = getServiceAndEnforceCallerUserAndConnect(source, "getRemoteAlias");
+        var service = getServiceAndEnforceCallerUserAndConnectAllowPcc(source, "getRemoteAlias");
         if (service == null) {
             return null;
         }
@@ -837,7 +851,7 @@ class AdapterServiceBinder extends IBluetooth.Stub {
     @Override
     public int getRemoteClass(BluetoothDevice device, AttributionSource source) {
         requireNonNull(device);
-        var service = getServiceAndEnforceCallerUserAndConnect(source, "getRemoteClass");
+        var service = getServiceAndEnforceCallerUserAndConnectAllowPcc(source, "getRemoteClass");
         if (service == null) {
             return 0;
         }
@@ -845,10 +859,12 @@ class AdapterServiceBinder extends IBluetooth.Stub {
         return service.getRemoteClass(device);
     }
 
+    // Nullable is needed because CTS enforce it
     @Override
-    public List<ParcelUuid> getRemoteUuids(BluetoothDevice device, AttributionSource source) {
+    public @Nullable List<ParcelUuid> getRemoteUuids(
+            BluetoothDevice device, AttributionSource source) {
         requireNonNull(device);
-        var service = getServiceAndEnforceCallerUserAndConnect(source, "getRemoteUuids");
+        var service = getServiceAndEnforceCallerUserAndConnectAllowPcc(source, "getRemoteUuids");
         if (service == null) {
             return Collections.emptyList();
         }
@@ -1180,7 +1196,7 @@ class AdapterServiceBinder extends IBluetooth.Stub {
     @Override
     public int getBatteryLevel(BluetoothDevice device, AttributionSource source) {
         requireNonNull(device);
-        var service = getServiceAndEnforceCallerUserAndConnect(source, "getBatteryLevel");
+        var service = getServiceAndEnforceCallerUserAndConnectAllowPcc(source, "getBatteryLevel");
         if (service == null) {
             return BluetoothDevice.BATTERY_LEVEL_UNKNOWN;
         }
@@ -1534,6 +1550,7 @@ class AdapterServiceBinder extends IBluetooth.Stub {
             return BluetoothStatusCodes.ERROR_BLUETOOTH_NOT_ALLOWED;
         }
 
+        Util.enforceCallingUidIsNotPcc("AdapterServiceBinder.startRfcommListener");
         service.enforceCallingOrSelfPermission(BLUETOOTH_PRIVILEGED, null);
         return service.startRfcommListener(name, uuid, pendingIntent, source);
     }
@@ -1871,7 +1888,7 @@ class AdapterServiceBinder extends IBluetooth.Stub {
 
         service.enforceCallingOrSelfPermission(BLUETOOTH_PRIVILEGED, null);
 
-        if (!Util.arrayContains(service.getBondedDevices(), device)) {
+        if (!service.getBondedDevices().contains(device)) {
             return BluetoothStatusCodes.ERROR_DEVICE_NOT_BONDED;
         }
         service.setActiveAudioPolicy(device, policy);
@@ -1916,7 +1933,7 @@ class AdapterServiceBinder extends IBluetooth.Stub {
 
         service.enforceCallingOrSelfPermission(BLUETOOTH_PRIVILEGED, null);
 
-        if (!Util.arrayContains(service.getBondedDevices(), device)) {
+        if (!service.getBondedDevices().contains(device)) {
             return BluetoothStatusCodes.ERROR_DEVICE_NOT_BONDED;
         }
         service.setMicrophonePreferredForCalls(device, enabled);
